[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attack-service"
version = "2.0.0"
description = "Attack Service for Missile Defense Simulation"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Missile Defense Sim Team"}
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "asyncpg==0.29.0",
    "prometheus-client==0.19.0",
    "nats-py==2.6.0",
    "pydantic==2.5.0",
    "pyzmq",
    "python-dateutil",
]

[project.optional-dependencies]
test = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "pytest-mock==3.12.0",
    "pytest-cov==4.1.0",
]

[project.scripts]
attack-service = "attack_service.main:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--asyncio-mode=auto",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow running",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov" 